# todo-rust

./: .gitignore  README.md  docker-compose.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/android/: DetailsActivity.kt  FragmentHandlerActivity.kt  MainActivity.kt
android/app/src/main/java/com/example/android/adapters/: ListAdapter.kt  ViewPageAdapter.kt
android/app/src/main/java/com/example/android/classes/: IArgs.kt  Todo.kt  Tuple.kt
android/app/src/main/java/com/example/android/fragments/: AddEditTodoFragment.kt  DetailsFragment.kt  ListDone.kt  ListDoneFragment.kt  ListTodo.kt  ListTodoFragment.kt
android/app/src/main/java/com/example/android/models/: DetailsViewModel.kt  TodoViewModel.kt
android/app/src/main/res/layout/: activity_main.xml  card.xml  fragment_add_edit_todo.xml  fragment_details.xml  fragment_handler_activity.xml  fragment_list.xml  fragment_list_done.xml  fragment_list_todo.xml
android/app/src/main/res/menu/: add_edit_todo_menu.xml  details_menu.xml
android/app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
database/: tables.sql
rest_api/: .env  Cargo.toml  Dockerfile  start.sh
rest_api/src/: main.rs
rest_api/src/config/: db.rs  mod.rs  server.rs
rest_api/src/error/: error_handler.rs  mod.rs
rest_api/src/todos/: mod.rs  model.rs  routes.rs
rest_api/templates/: index.html
rest_api/templates/todos/: add.html  edit.html  todos.html
(+1 files in other folders)
