[package]
name = "rest_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-rt = "1.0.0"
dotenv = "0.15"
log = "0.4.14"
env_logger = "0.8.0"
serde = "1.0.0"
serde_json = "1.0.0"
postgres = "0.19.1"
tera = "1.12.0"
